<resources>
    <string name="app_name">Image Upload
    </string>

    <string name="equipment_id">Equipment ID</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="notes">Notes</string>
    <string name="audiofiles">AudioFile</string>
    <string name="image_gps">ImageGPS</string>
    <string name="image_date_time">ImageDateTime</string>
    <string name="image_file">ImageFile</string>
    <string name="add_audio">Add Audio</string>
    <string name="add_notes">Add Notes</string>
    <string name="btn_submit">Submit</string>
    <string name="add_engineering_inspection_service">Add Inspection Service</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="play_recording">Play recording</string>
    <string name="stop_playing">Upload Audio</string>
</resources>